[package]
name = "device-tree-merger"
version = "0.1.0"
authors = ["Michael Pankov <work@michaelpankov.com>"]
edition = "2018"

[dependencies]
device-types = { version = "0.1", git = "https://github.com/whamcloud/device-scanner.git" }
iml-wire-types = { path = "../iml-wire-types", version = "0.2", features = ["postgres-interop"] }
serde = "1.0.110"
serde_json = "1.0.53"
tracing = "0.1.14"
treediff = { git = "https://github.com/whamcloud/treediff-rs.git", branch = "key-serde", version = "4.0.0", features = ["with-serde-json"] }
